Fix GitHub Actions workflow: syntax error in name, move check before commit

--- a/.github/workflows/daily-tools.yml
+++ b/.github/workflows/daily-tools.yml
@@ -1,6 +1,6 @@
-name Tools
+name: Daily Product Hunt Tools
 
-: Daily Product Hunton:
+on:
   schedule:
     # Run daily at 7:30 AM UTC = 3:30 PM Beijing Time
     - cron: '30 7 * * *'
@@ -29,17 +29,6 @@ jobs:
         run: |
           node scripts/fetch-tools.js
 
-      - name: Commit & Push
-        if: changes.filesChanged == 'true'
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add data/tools.json
-          git commit -m "Update Product Hunt Top 8 - $(date +%Y-%m-%d)" || echo "No changes"
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-
       - name: Check for changes
         id: changes
         run: |
@@ -48,3 +37,14 @@ jobs:
           else
             echo "filesChanged=false" >> $GITHUB_OUTPUT
           fi
+
+      - name: Commit & Push
+        if: steps.changes.outputs.filesChanged == 'true'
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add data/tools.json
+          git commit -m "Update Product Hunt Top 8 - $(date +%Y-%m-%d)"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
