--- a/.github/workflows/daily-tools.yml
+++ b/.github/workflows/daily-tools.yml
@@ -28,6 +28,8 @@ jobs:
       - name: Fetch Top 8 Tools
         run: |
           node scripts/fetch-tools.js
+        env:
+          PH_TOKEN: ${{ secrets.PH_TOKEN }}
 
       - name: Check for changes
         id: changes
